# banking-nlp-project

./: .gitignore  LICENSE  README.md  app.py  preprocess.py  pyproject.toml  scraper.py
data/: cleaned_reviews.csv  raw_reviews.csv
src/: analyzer.py  dashboard.py  preprocess.py
