[project]
name = "nlp-bankingapp"
version = "0.1.0"
description = ""
authors = [
    {name = "NDPhuu",email = "ducphu.tc10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.126.0,<0.127.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "google-play-scraper (>=1.2.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
